--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "esn-i18n",
+  "name": "@linagora/i18n-node",
   "description": "lightweight translation module with dynamic json storage",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "homepage": "http://github.com/mashpie/i18n-node",
   "repository": {
     "type": "git",
-    "url": "https://ci.linagora.com/linagora/lgs/openpaas/i18n-node.git"
+    "url": "https://github.com/linagora/i18n-node"
   },
   "author": "Marcus Spiegel <marcus.spiegel@gmail.com>",
   "main": "./index",
