--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i18n",
+  "name": "@linagora/i18n-node",
   "description": "lightweight translation module with dynamic json storage",
   "version": "0.9.1",
   "homepage": "http://github.com/mashpie/i18n-node",
